<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.eways.elearning.View.Activity.MainActivity">
    <!--Tiêu đề-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LayoutTop"
        android:background="@color/colorMain">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tittle_Login"
            android:textSize="@dimen/Title_Login_Size"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/Title_Color"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/LayoutDangNhap_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/LayoutDangNhap_Margintop">
        <!--Lỗi-->
        <TextView
            android:id="@+id/tvLoiDN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/loi_textsizeDN"
            android:textColor="@color/colorError"/>
        <!--Tên đăng nhập-->
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ViewDangNhap_height"
            android:layout_gravity="center"
            android:textColorHint="@color/colorHint"
            android:layout_marginTop="@dimen/ViewDangNhap_marginTop"
            android:background="@drawable/etusername_etpass_shape"
            android:hint="@string/Hint_username" />
        <!--Nhập mật khẩu-->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ViewDangNhap_height"
            android:layout_gravity="center"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/etusername_etpass_shape"
            android:drawableRight="@android:drawable/ic_menu_view"
            android:layout_marginTop="@dimen/ViewDangNhap_marginTop"
            android:hint="@string/Hint_password"
            android:inputType="textPassword"/>


        <!--Quên mật khẩu-->
        <TextView
            android:id="@+id/tvForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ForgerPass"
            android:textSize="@dimen/ForgetPass_textsize"
            android:textColor="@color/colorMain"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ViewDangNhap_marginTop"/>
        <!--Nút đăng ký và đăng nhập-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ViewDangNhap_marginTop">
            <Button
                android:id="@+id/btnSignup"
                android:text="@string/btnSignup"
                android:textColor="@color/colorTextBtnDkDn"
                android:layout_width="@dimen/ViewDangNhap_btnWidth"
                android:layout_height="@dimen/ViewDangNhap_height"
                android:background="@drawable/btnlogin_btndk_shape"/>
            <Button
                android:id="@+id/btnLogin"
                android:text="@string/btnLogin"
                android:textColor="@color/colorTextBtnDkDn"
                android:layout_width="@dimen/ViewDangNhap_btnWidth"
                android:layout_height="@dimen/ViewDangNhap_height"
                android:layout_marginLeft="@dimen/BtnDangNhap_marginLeft"
                android:background="@drawable/btnlogin_btndk_shape" />
        </LinearLayout>
        <!--Nút đăng ký và đăng nhập Gmail và Facebook-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ViewDangNhap_marginTop">
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:layout_weight="1"
                android:background="@color/colorDivider"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hoặc"
                android:gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:layout_weight="1"
                android:background="@color/colorDivider"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ViewDangNhap_marginTop">
            <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/btnLoginFB"-->
            <!--android:layout_width="@dimen/btnLoginFB_width"-->
            <!--android:layout_height="@dimen/btnLoginFB_height"-->
            <!--android:paddingBottom="@dimen/btnLoginFB_paddingbottom"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_weight="1"/>-->

            <Button
                android:id="@+id/btnLoginFB"
                android:layout_width="@dimen/ViewDangNhap_btnWidth"
                android:layout_height="@dimen/ViewDangNhap_height"
                android:layout_weight="1"
                android:background="#0084ff"
                android:text="Facebook"
                android:textColor="#fffefe"/>


            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnLoginGmail"
                android:layout_width="@dimen/ViewDangNhap_btnWidth"
                android:layout_height="@dimen/ViewDangNhap_height"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/BtnDangNhap_marginLeft"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
