<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.eways.elearning.View.Fragment.Home.HomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/white">

    <!-- Hình đại diện-->
    <ImageView
        android:id="@+id/avatar_home"
        android:layout_width="@dimen/avatar_main_size"
        android:layout_height="@dimen/avatar_main_size"
        android:layout_marginTop="@dimen/avatar_main_margin_top"
        android:background="@drawable/avatar_shape"/>

    <!-- Tên -->
    <TextView
        android:id="@+id/tvTen_Home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/user_info_margin_top"
        android:text="Welcome to ELearning"
        android:textSize="@dimen/user_name_main_size"
        android:textStyle="bold"
        android:textColor="@color/textColorDark"/>

    <!-- Message -->
    <TextView
        android:id="@+id/tvGioiThieu_Home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/user_info_margin_top"
        android:text="Đăng nhập để sử dụng đầy đủ tính năng"
        android:textColor="@android:color/black"/>

    <!-- Chức năng -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/danh_sach_chuc_nang_horizontal_padding"
        android:paddingRight="@dimen/danh_sach_chuc_nang_horizontal_padding"
        android:layout_marginTop="@dimen/danh_sach_chuc_nang_margion_top">
        <!-- Xem danh sách bài đăng -->
        <Button
            android:id="@+id/btn_xem_danh_sach_khoa_hoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_color_with_corner_rectangle_shape"
            android:text="@string/xem_danh_sach_bai_dang"
            android:textColor="@android:color/white"/>
        <!-- Tạo khóa học -->
        <Button
            android:id="@+id/btn_tao_khoa_hoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_danh_sach_chuc_nang_margin_top"
            android:background="@drawable/main_color_with_corner_rectangle_shape"
            android:text="@string/tao_khoa_hoc"
            android:textColor="@android:color/white"/>
        <!-- Đăng tin -->
        <Button
            android:id="@+id/btn_dang_tin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_danh_sach_chuc_nang_margin_top"
            android:background="@drawable/main_color_with_corner_rectangle_shape"
            android:text="@string/hoi_dap"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>
