<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_item_user_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/white_rectangle_corner_main_color_stroke_shape"
    android:orientation="horizontal">

    <!--User avatar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/MarginBottom_itemKhoaHoc"
        android:layout_marginLeft="@dimen/MarginLeft_itemKhoaHoc_BlockImg"
        android:layout_marginRight="@dimen/MarginRight_itemKhoaHoc_BlockImg"
        android:layout_marginTop="@dimen/MarginTop_itemKhoaHoc"
        android:layout_weight="1.7"
        android:background="@drawable/white_rectangle_corner_main_color_stroke_shape"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/avatar_item_user_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <!--User info-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/MarginBottom_itemKhoaHoc"
        android:layout_marginLeft="@dimen/MarginLeft_itemKhoaHoc_BlockInfo"
        android:layout_marginRight="@dimen/MarginRight_itemKhoaHoc_BlockInfo"
        android:layout_marginTop="@dimen/MarginTop_itemKhoaHoc"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_rectangle_corner_main_color_stroke_shape"
            android:orientation="vertical"
            android:padding="@dimen/horizontal_padding_user_info_list_item">

            <!--User name-->
            <TextView
                android:id="@+id/user_name_item_user_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/MarginTop_Tv_KhoaHoc"
                android:text="@string/Xem_Ten"
                android:textStyle="bold"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/colorMain"/>

            <!--Subject's name-->
            <TextView
                android:id="@+id/subject_item_user_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/MarginTop_Tv_KhoaHoc"
                android:text="@string/Xem_Mon"
                android:textSize="@dimen/TextSize_KhoaHoc"
                android:textColor="@color/colorMain"/>

            <!--Period-->
            <TextView
                android:id="@+id/birthday_item_user_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/MarginTop_Tv_KhoaHoc"
                android:text="@string/nam_sinh_cap_nhat_thong_tin_ca_nhan"
                android:textSize="@dimen/TextSize_KhoaHoc"
                android:textColor="@color/colorMain" />

            <!--Rating-->
            <RatingBar
                android:id="@+id/rtb_item_user_list"
                style="@style/ratingbarCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/MarginTop_Tv_KhoaHoc"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.5" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>